# mk-feedback-driven-sql-optimization

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  QueryOptimizer.sln  README.md  docker-compose.job-imdb.yml  docker-compose.monitoring.yml  docker-compose.tpch.yml  docker-compose.yml
config/: postgresql.conf
data-loader/: Dockerfile  load-smoke.sh
experiment-artifacts/: .gitkeep  job-imdb-mixed-20260522-224026-SHA256SUMS.txt  job-imdb-mixed-20260523-101959-SHA256SUMS.txt  job-imdb-mixed-20260524-090447-SHA256SUMS.txt  job-imdb-mixed-20260524-215655-SHA256SUMS.txt  real-world-sf1-mixed-20260522-221945-SHA256SUMS.txt  real-world-sf1-mixed-20260523-100904-SHA256SUMS.txt  real-world-sf1-mixed-20260524-085401-SHA256SUMS.txt  (+5 more)
experiment-results/: README.md  (+12 more)
src/rewrite-service/: .dockerignore  Dockerfile  pyproject.toml
src/rewrite-service/app/: __init__.py  config.py  main.py
src/rewrite-service/app/api/: __init__.py  models.py
src/rewrite-service/app/llm/: __init__.py  client.py  generator.py  prompt_builder.py  response_parser.py
src/rewrite-service/app/parser/: __init__.py  sql_parser.py
src/rewrite-service/app/rules/: __init__.py  aggregation.py  common.py  engine.py  joins.py  predicates.py  projection.py  subqueries.py
src/rewrite-service/app/validation/: equivalence.py
src/rewrite-service/tests/: test_local_llm.py  test_semantic_safety_regressions.py  test_static_parser_and_validation.py  test_static_rules.py  test_tpc_h_evaluation_workflow.py
(+67 files in other folders)
