[project]
name = "rewrite-service"
version = "0.1.0"
description = "SQL rewrite service for feedback-driven query optimization"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "pglast==7.13",
  "psycopg[binary]==3.3.3",
  "pydantic==2.13.3",
  "httpx==0.28.1",
  "xxhash==3.7.0",
  "prometheus-client==0.25.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "mypy==1.20.2",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
